Update and rename jenkinsfile to JenkinsFile

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
     stages {
         stage('Install packages') {
             steps {
-                git branch: 'develop', url: 'https://github.com/YAPLOG/yaplog-api.git'
+                git branch: 'develop', url: 'https://github.com/timberzzman/yaplog-api-devops.git'
                 sh 'npm ci'
             }
         }
